--- a/0x02-i18n/translations/fr/LC_MESSAGES/messages.po
+++ b/0x02-i18n/translations/fr/LC_MESSAGES/messages.po
@@ -25,3 +25,11 @@ msgstr "Bienvenue chez Holberton"
 #: templates/3-index.html:7 templates/4-index.html:7 templates/5-index.html:7
 msgid "home_header"
 msgstr "Bonjour monde!"
+
+#: templates/3-index.html:4 templates/4-index.html:4 templates/5-index.html:4
+msgid "logged_in_as"
+msgstr "Vous êtes connecté en tant que %(username)s."
+
+#: templates/3-index.html:7 templates/4-index.html:7 templates/5-index.html:7
+msgid "not_logged_in"
+msgstr "Vous n'êtes pas connecté."
